cargo_check_final_rbac_9.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-db v0.1.0 (/app/crates/auth-db)
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
warning: unused import: `std::collections::HashMap`
 --> crates/auth-db/src/repositories/authorization/role_repository.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-db` (lib) generated 1 warning (run `cargo fix --lib -p auth-db` to apply 1 suggestion)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
warning: unused import: `RoleScope`
 --> crates/auth-api/src/handlers/authorization/roles.rs:9:44
  |
9 | use auth_core::models::{CreateRoleRequest, RoleScope};
  |                                            ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
  --> crates/auth-api/src/handlers/authorization/roles.rs:10:5
   |
10 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `state`
  --> crates/auth-api/src/handlers/authorization/roles.rs:41:11
   |
41 |     State(state): State<AppState>,
   |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `auth-api` (lib) generated 3 warnings (run `cargo fix --lib -p auth-api` to apply 3 suggestions)
    Checking auth-sso-platform v0.1.0 (/app)
error[E0432]: unresolved import `auth_db::repositories::role_repository`
  --> src/main.rs:16:5
   |
16 |     role_repository::RoleRepository,
   |     ^^^^^^^^^^^^^^^ could not find `role_repository` in `repositories`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `auth-sso-platform` (bin "auth-sso-platform") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0432]: unresolved import `auth_db::repositories::UserRepository`
 --> src/bin/test_auth_flow.rs:4:5
  |
4 | use auth_db::repositories::UserRepository;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `UserRepository` in `repositories`
  |
help: a similar name exists in the module
  |
4 - use auth_db::repositories::UserRepository;
4 + use auth_db::repositories::user_repository;
  |
help: consider importing this struct instead
  |
4 - use auth_db::repositories::UserRepository;
4 + use auth_db::user_repository::UserRepository;
  |

error[E0282]: type annotations needed
  --> src/bin/test_auth_flow.rs:97:24
   |
97 |     let user_fetched = user_repo.find_by_id(user.id).await?.expect("User should exist");
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `auth-sso-platform` (bin "test_auth_flow") due to 2 previous errors
